--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    container:
+      image: edlawitg/code_avengers:erp-backend
 
     steps:
       - name: Checkout repository
@@ -21,8 +23,10 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Build Docker image
-        run: docker build -t your-image-name .
-
-      - name: Run Docker container
-        run: docker run -d -p 8000:8000 --name eprsystemformekedoina eprsystemformekedoina-erp_backend:latest
+      - name: Build docker
+        run: |
+          echo ---Building and starting up docker---
+          docker-compose -f ./code_avengers/docker-compose.yml 
+          echo ---Containers up---
+      # - name: Run Docker container
+      #   run: docker run -d -p 8000:8000 --name eprsystemformekedoina eprsystemformekedoina-erp_backend:latest
