--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,12 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+        
+      - name: Build service s
+        run: docker-compose up -d
+
+      - name: List container
+        run: docker-compose ps
 
       - name: Build docker
         run: |
