--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,16 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+      - name: Install Docker Compose
+        run: |
+          sudo apt update
+          sudo apt install docker-compose
+      - name: Build service s
+        run: docker-compose up -d
+
+      - name: List container
+        run: docker-compose ps
+
       - name: Build docker
         run: |
           echo ---Building and starting up docker---
