--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,8 +24,7 @@ jobs:
         run: npm install
       - name: Install Docker Compose
         run: |
-         apt-get update
-         apt-get install docker-compose
+         scoop install docker-compose
       - name: Build service s
         run: docker-compose up -d
 
