--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,9 +22,14 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+
       - name: Install Docker Compose
         run: |
-         scoop install docker-compose
+          # Install Docker Compose
+          curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o docker-compose
+          chmod +x docker-compose
+          sudo mv docker-compose /usr/local/bin/
+          
       - name: Build service s
         run: docker-compose up -d
 
