--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,10 +26,10 @@ jobs:
       - name: Install Docker Compose
         run: |
           # Install Docker Compose
-          curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o docker-compose
+           wget -O "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o docker-compose
           chmod +x docker-compose
           sudo mv docker-compose /usr/local/bin/
-          
+
       - name: Build service s
         run: docker-compose up -d
 
