--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,8 +25,8 @@ jobs:
 
       - name: Install Docker Compose
         run: |
-          # Install Docker Compose
-           wget -O "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o docker-compose
+          # Install Docker Compose using wget
+          wget -O docker-compose "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)"
           chmod +x docker-compose
           sudo mv docker-compose /usr/local/bin/
 
