--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
 
     services:
       registry:
-        image: edlawitg/code_avengers:erp-backend
+        image: edlawitg/code_avengers
         ports:
           - 8000:8001
 
@@ -29,21 +29,33 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Install Docker Compose
-        run: |
-          # Install Docker Compose using wget
-          wget -O docker-compose "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)"
-          chmod +x docker-compose
-
-      - name: Build docker
-        run: |
-          echo ---Building and starting up docker---
-          docker-compose up -f "docker-compose.yml" up -d --build
-          echo ---Containers up---
-
-      # - name: Run the Container
-      #   id: run
+      # - name: Install Docker Compose
       #   run: |
-      #     docker run
+      #     # Install Docker Compose using wget
+      #     wget -O docker-compose "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)"
+      #     chmod +x docker-compose
+      - name: Setup Docker BuildX
+        id: setup-buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          install: true
+          driver-opts: network=host
+
+      # - name: Build docker
+      #   run: |
+      #     echo ---Building and starting up docker---
+      #     docker-compose up -f "docker-compose.yml" up -d --build
+      #     echo ---Containers up---
+      - name: Build the Container
+        id: build
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+
+      - name: Run the Container
+        id: run
+        run: |
+          docker run
       # - name: Run Docker container
       #   run: docker run -d -p 8000:8000 --name eprsystemformekedoina eprsystemformekedoina-erp_backend:latest
