--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,60 +2,30 @@ name: CI
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main , stage ]
+  pull_request:
+    branches: [ main, stage, dev ]
 
 jobs:
-  docker:
+  build-and-test:
     runs-on: ubuntu-latest
-    container:
-      image: node:20-alpine
-
-    services:
-      registry:
-        image: edlawitg/code_avengers:erp-backend
-        ports:
-          - 8000:8001
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v3
+      - name: Use Node.js 20
+        uses: actions/setup-node@v3
         with:
           node-version: 20
+      - name: Cache dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package*.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
+      - name: Run tests
+        run: npm test
 
-      # - name: Install Docker Compose
-      #   run: |
-      #     # Install Docker Compose using wget
-      #     wget -O docker-compose "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)"
-      #     chmod +x docker-compose
-      - name: Setup Docker BuildX
-        id: setup-buildx
-        uses: docker/setup-buildx-action@v3
-        with:
-          install: true
-          driver-opts: network=host
-
-      # - name: Build docker
-      #   run: |
-      #     echo ---Building and starting up docker---
-      #     docker-compose up -f "docker-compose.yml" up -d --build
-      #     echo ---Containers up---
-      - name: Build the Container
-        id: build
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-
-      - name: Run the Container
-        id: run
-        run: |
-          docker run
-      # - name: Run Docker container
-      #   run: docker run -d -p 8000:8000 --name eprsystemformekedoina eprsystemformekedoina-erp_backend:latest
+      
