--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "hi-base32": "^0.5.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.4",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.10",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "otpauth": "^9.2.2",
+    "qrcode": "^1.5.3"
   },
   "devDependencies": {
     "jest": "^29.7.0"
