--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "nodemailer": "^6.9.10",
     "nodemon": "^3.0.2",
     "otpauth": "^9.2.2",
-    "qrcode": "^1.5.3"
+    "qrcode": "^1.5.3",
+    "speakeasy": "^2.0.0"
   },
   "devDependencies": {
     "jest": "^29.7.0"
