--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@hapi/joi": "^17.1.1",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.0.1",
     "cookie-parser": "^1.4.6",
@@ -20,12 +19,15 @@
     "express": "^4.18.2",
     "express-session": "^1.18.0",
     "hi-base32": "^0.5.1",
+    "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.4",
     "multer": "^1.4.5-lts.1",
+    "node-thermal-printer": "^4.4.2",
     "nodemailer": "^6.9.10",
     "nodemon": "^3.0.2",
     "otpauth": "^9.2.2",
+    "pdfkit": "^0.14.0",
     "qrcode": "^1.5.3",
     "speakeasy": "^2.0.0"
   },
