--- a/.env
+++ b/.env
@@ -1,2 +1,10 @@
-PORT= 8000
-DB_URL = "mongodb+srv://codeavengers:RGW2oDJmyUb6CFYB@erp.kx0ck6v.mongodb.net/ERP?retryWrites=true&w=majority"
+#env
+
+PORT= 
+DB_URL =
+CLOUD_NAME =
+CLOUDINARY_API_KEY =
+CLOUDINARY_API_SECRET =
+JWT_TOKEN_KEY =
+GMAIL_USERNAME=
+GMAIL_PASSWORD=
