--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "hi-base32": "^0.5.1",
     "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.0.4",
     "multer": "^1.4.5-lts.1",
     "node-thermal-printer": "^4.4.2",
