--- a/package.json
+++ b/package.json
@@ -34,9 +34,14 @@
     "path": "^0.12.7",
     "process": "^0.11.10",
     "qrcode": "^1.5.3",
-    "speakeasy": "^2.0.0"
+    "semver": "^7.6.0",
+    "speakeasy": "^2.0.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.24.1",
+    "@babel/core": "^7.24.4",
+    "@babel/preset-env": "^7.24.4",
     "jest": "^29.7.0"
   }
 }
