--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/local-auth": "^3.0.1",
+    "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "bwip-js": "^4.3.1",
     "cloudinary": "^2.0.1",
