--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/local-auth": "^3.0.1",
+    "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "bwip-js": "^4.3.1",
+    "chapa-nodejs": "^1.3.1",
     "cloudinary": "^2.0.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
