--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "express-session": "^1.18.0",
     "googleapis": "^134.0.0",
     "hi-base32": "^0.5.1",
+    "import-local": "^3.1.0",
     "joi": "^17.12.3",
     "jsonwebtoken": "^9.0.2",
+    "mock-fs": "^5.2.0",
     "moment": "^2.30.1",
     "mongoose": "^8.0.4",
     "multer": "^1.4.5-lts.1",
@@ -37,7 +39,8 @@
     "process": "^0.11.10",
     "qrcode": "^1.5.3",
     "socket.io": "^4.7.5",
-    "speakeasy": "^2.0.0"
+    "speakeasy": "^2.0.0",
+    "supertest": "^7.0.0"
   },
   "devDependencies": {
     "jest": "^29.7.0"
