--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "hi-base32": "^0.5.1",
     "joi": "^17.12.3",
     "jsonwebtoken": "^9.0.2",
+    "mock-fs": "^5.2.0",
+    "mock-req-res": "^1.2.1",
     "moment": "^2.30.1",
     "mongoose": "^8.0.4",
     "multer": "^1.4.5-lts.1",
@@ -36,8 +38,10 @@
     "path": "^0.12.7",
     "process": "^0.11.10",
     "qrcode": "^1.5.3",
+    "sinon": "^18.0.0",
     "socket.io": "^4.7.5",
-    "speakeasy": "^2.0.0"
+    "speakeasy": "^2.0.0",
+    "supertest": "^7.0.0"
   },
   "devDependencies": {
     "jest": "^29.7.0"
