--- a/package.json
+++ b/package.json
@@ -26,20 +26,22 @@
     "hi-base32": "^0.5.1",
     "joi": "^17.12.3",
     "jsonwebtoken": "^9.0.2",
+    "mock-fs": "^5.2.0",
     "moment": "^2.30.1",
     "mongoose": "^8.0.4",
     "multer": "^1.4.5-lts.1",
     "node-thermal-printer": "^4.4.2",
     "nodemailer": "^6.9.10",
-    "nodemon": "^3.0.2",
     "otpauth": "^9.2.2",
     "path": "^0.12.7",
     "process": "^0.11.10",
     "qrcode": "^1.5.3",
     "socket.io": "^4.7.5",
-    "speakeasy": "^2.0.0"
+    "speakeasy": "^2.0.0",
+    "supertest": "^7.0.0"
   },
   "devDependencies": {
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.3"
   }
 }
